compiler/actonc/test/typeerrors/ex2.golden
Building file test/typeerrors/ex2.act
  Compiling ex2.act for development

ERROR: Error when compiling ex2 module: Type error

  |
1 |def f(x,y):
  |    ^


  |
4 |a = f(3,4,5)
  |    ^^^^^^^^
Type incompatibility between definition of and call of f (too many positional argument(s) in call)

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

